Update file download instructions

--- a/code/cnn-feature-embeddings_wytham.ipynb
+++ b/code/cnn-feature-embeddings_wytham.ipynb
@@ -74,10 +74,9 @@
    "source": [
     "## Download files\n",
     "\n",
-    "* Open our Google Drive folder here: https://drive.google.com/drive/u/0/folders/1-XOEcKHOSiDSIlSHElOeJY5Jza4Hc-7v\n",
-    "* Download the two files (`wytham_annotations.csv` and `wytham_songs.zip`)\n",
-    "* Unzip the zip folder\n",
-    "* Place the files into a folder of your choosing and write the path to the folders below:"
+    "These files are located on our Google Drive folder here: https://drive.google.com/drive/u/0/folders/1-XOEcKHOSiDSIlSHElOeJY5Jza4Hc-7v but you likely already downloaded them if you followed the steps in the README.\n",
+    "\n",
+    "They should be downloaded and placed in the `data` folder of this repository."
    ]
   },
   {
@@ -87,8 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wav_folder = \"/Users/tessa/Code/scratchpad/acoustic-communication-and-bioacoustics-bootcamp/code/wytham_songs/\"\n",
-    "csv_path = \"/Users/tessa/Code/scratchpad/acoustic-communication-and-bioacoustics-bootcamp/code/wytham_annotations.csv\""
+    "wav_folder = \"../data/Merino-Recalde-Wytham-Great-Tit-Dataset-2023-subset/wytham_songs/\"\n",
+    "csv_path = \"../data/Merino-Recalde-Wytham-Great-Tit-Dataset-2023-subset/wytham_annotations.csv\""
    ]
   },
   {
