Update notebooks, rename one of them

--- a/01-segmentation.ipynb
+++ b/01-segmentation.ipynb
@@ -41,10 +41,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "45887cc2-308b-40ea-8d9a-39f7ed6f753c",
+   "metadata": {},
+   "source": [
+    "## the `vocalpy.Segments` data type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f2ddc365-0bbe-40c6-bcd9-92e4e2995e97",
    "metadata": {},
    "source": [
-    "We're going to segment it with one of the methods built into the `vocalpy.segment` module."
+    "We're going to segment that sound with one of the methods built into the `vocalpy.segment` module."
    ]
   },
   {
@@ -76,6 +84,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e0027cb7-9d97-44ac-be38-cc0a4839f9ab",
+   "metadata": {},
+   "source": [
+    "How many segments are there?The \"raw data\" of segments is given in term of sample indices, because on a computer we are always dealing with digital samples anyways.\n",
+    "\n",
+    "But as humans it's easier for us to think"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "72ea3b09-56c6-4517-8fe0-3d84d069005e",
@@ -87,10 +105,126 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5101d73b-525b-4242-a67b-1b2750d7dcac",
+   "metadata": {},
+   "source": [
+    "Because on a computer we are always dealing with digital samples, the \"raw data\" of segments is given in term of samples and indices: the index of the `start_sample` and the `length` of the segment in samples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c550a10-f49c-44da-a8ea-94f3cfc55723",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segments.start_inds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7796d12a-36c2-4ff9-a5c0-a6f9d1dcf090",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segments.lengths"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2a60a65-f028-4d6e-bb06-39cdd29bcdb6",
+   "metadata": {},
+   "source": [
+    "But as humans it's often easier for us to think of segments in terms of seconds. The `Segments` class will convert to seconds for us."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f200ecd-26e2-4488-8835-607e659cd31a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segments.start_times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b2fb15c-f443-4275-bab3-460a3bba9ef4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segments.durations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2950d078-8e6e-4222-9b84-9a1acb2642a5",
+   "metadata": {},
+   "source": [
+    "## the `vocalpy.Segmenter` class\n",
+    "\n",
+    "Like when we made spectrograms, we can use a `Segmenter` class to capture the function and parameters we use, and to trivially parallelize processing a bunch of files.\n",
+    "\n",
+    "For this notebook, We will use a subset of data from the [Bengalese Finch Song Repository](https://nickledave.github.io/bfsongrepo/).\n",
+    "\n",
+    "Note this data is also built into VocalPy as an example, but that it gets downloaded when you call `vocalpy.example('bfsongrepo')` -- so we downloaded it ahead of time, to avoid having a room full of people downloaded MBs of data all at once."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb227b29-8cb4-4794-bf04-36580058e615",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bfsongrepo_dir = './data/Nicholson-Queen-Sober-2017-bfsongrepo-subset/'\n",
+    "wav_paths = voc.paths.from_dir(bfsongrepo_dir, 'wav')\n",
+    "csv_paths = voc.paths.from_dir(bfsongrepo_dir, 'csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eccc745c-219e-4700-858d-05a23eeb3cf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sounds = [\n",
+    "    voc.Sound.read(wav_path)\n",
+    "    for wav_path in wav_paths\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "218bb22c-e308-4afe-af4f-654971944fe6",
+   "metadata": {},
+   "source": [
+    "We will use the `voc.segment.meansquared` function, and to be extra explicit we use a data class, `voc.segment.MeanSquaredParams`, to represent the parameters we use."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1031738d-c8b5-4dce-8b8c-98688558bc89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "callback = voc.segment.meansquared\n",
+    "params = voc.segment.MeanSquaredParams(threshold=1500, min_dur=0.01, min_silent_dur=0.006)\n",
+    "segmenter = voc.Segmenter(callback, params)\n",
+    "segments_list = segmenter.segment(sounds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7ec558dd",
    "metadata": {},
    "source": [
-    "## Background\n",
+    "## Segmentation metrics\n",
     "\n",
     "The goal of our evaluation is to get a measure of how close the segments from an algorithm are to a segmentation created by a human annotator. We will call the annotation created by the human annotator the *ground truth* or *reference* segmentation, and we will call the output of an algorithm the *hypothesis*. \n",
     "\n",
@@ -188,36 +322,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd68b5ab",
-   "metadata": {},
-   "source": [
-    "## Compare segmentation algorithms\n",
-    "\n",
-    "### Get data\n",
-    "\n",
-    "We will use a subset of data from the [Bengalese Finch Song Repository](https://nickledave.github.io/bfsongrepo/), that is built into VocalPy as an example."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb10e979",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bfsongrepo_dir = './data/Nicholson-Queen-Sober-2017-bfsongrepo-subset/'\n",
-    "wav_paths = voc.paths.from_dir(bfsongrepo_dir, 'wav')\n",
-    "csv_paths = voc.paths.from_dir(bfsongrepo_dir, 'csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "1fa577fd",
    "metadata": {},
    "source": [
     "### Segment audio\n",
     "\n",
-    "To set ourselves up to analyze the results below, we will make a Python dictionary that maps a string `'name'` (for the algorithm we are testing) to the {py:class}`list` of {py:class}`vocalpy.Segments` returned by the algorithm. Since we test the same algorithm twice with different parameters, we will think of this name as a \"condition\" (the three conditions we outlined above)."
+    "To set ourselves up to analyze the results below, we will make a Python dictionary that maps a string `'name'` (for the algorithm we are testing) to the `list` of `vocalpy.Segments` returned by the algorithm. Since we test the same algorithm twice with different parameters, we will think of this name as a \"condition\" (the three conditions we outlined above)."
    ]
   },
   {
@@ -236,23 +346,10 @@
    "metadata": {},
    "source": [
     "To actually get the results, we will write a loop.\n",
-    "Inside the loop, we will use the {py:class}`vocalpy.Segmenter` class.  \n",
+    "Inside the loop, we will use the `vocalpy.Segmenter` class.  \n",
     "This class takes has two parameters: a `callback` function, and the `params` (parameters) we will pass to that function.\n",
     "Each time through the loop, we will make an instance of the `Segmenter` class by passing in a specific `callback` and set of `params` as the two arguments. Then when we call the `segment` method on that instance, the class will call the `callback` function.\n",
     "So, at the top of the loop, we define a tuple of 3-element tuples that we iterate through. Each 3-element tuple has the condition `name`, the `callback` and the `params` we will use with it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df868e35-fa1c-4735-8d41-911a7cf64791",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sounds = [\n",
-    "    voc.Sound.read(wav_path)\n",
-    "    for wav_path in wav_paths\n",
-    "]"
    ]
   },
   {
@@ -284,7 +381,7 @@
     "\n",
     "Now we need our reference segmentation to compare to.\n",
     "\n",
-    "We will need list of {py:class}`vocalpy.Segments` for this too, but here we make them using {py:class}`~vocalpy.Annotation` that we load from the example datasets. These annotations contain the ground truth segmentation that we want to compare with the results from the algorithms."
+    "We will need list of `vocalpy.Segments` for this too, but here we make them using `vocalpy.Annotation` that we load from the example datasets. These annotations contain the ground truth segmentation that we want to compare with the results from the algorithms."
    ]
   },
   {
@@ -469,44 +566,6 @@
    "metadata": {},
    "source": [
     "We can see that the `'meansquared'` algorithm *with* the clean-up steps has the highest precision and recall. Perhaps surprisingly, the `'meansquared'` algorithm *without* clean-up has a *lower* precision than the `average_envelope_threshold`, and even more surprisingly, it has the highest recall of all. We can understand this as follows: the `'meansquared'` algorithm finds \"more\" segments than the `'average_envelope_threshold'` algorithm--giving it a higher recall--but that also means it returns more false positives. More generally, a result like this would suggest that the clean-up steps have a bigger impact on performance than the methods used to compute the energy and the exact threshold used. Keep in mind that we've shown here is just a demo. To really draw this conclusion we'd need to do an extensive analysis across datasets, and be very clear about our intended use cases for the algorithm."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a1c0a113",
-   "metadata": {},
-   "source": [
-    "## References\n",
-    "\n",
-    "[^1]: Kershenbaum, Arik, et al.\n",
-    "\"Acoustic sequences in non‐human animals: a tutorial review and prospectus.\" \n",
-    "Biological Reviews 91.1 (2016): 13-52.\n",
-    "https://onlinelibrary.wiley.com/doi/abs/10.1111/brv.12160\n",
-    "\n",
-    "[^2]: Odom, Karan J., et al. \n",
-    "\"Comparative bioacoustics: a roadmap for quantifying and comparing animal sounds across diverse taxa.\" \n",
-    "Biological Reviews 96.4 (2021): 1135-1159.\n",
-    "https://onlinelibrary.wiley.com/doi/abs/10.1111/brv.12695\n",
-    "\n",
-    "[^3]: Tumer, Evren C., and Michael S. Brainard.\n",
-    "\"Performance variability enables adaptive plasticity of ‘crystallized’ adult birdsong.\"\n",
-    "Nature 450.7173 (2007): 1240-1244.\n",
-    "https://www.academia.edu/download/46524972/nature06390.pdf\n",
-    "\n",
-    "[^4]: Kemp, T., Schmidt, M., Whypphal, M., & Waibel, A. (2000, June).\n",
-    "Strategies for automatic segmentation of audio data.\n",
-    "In 2000 ieee international conference on acoustics, speech, and signal processing.\n",
-    "proceedings (cat. no. 00ch37100) (Vol. 3, pp. 1423-1426). IEEE.\n",
-    "http://www1.icsi.berkeley.edu/~dpwe/research/etc/icassp2000/pdf/980_1114.PDF\n",
-    "\n",
-    "[^5]: Jordán, P. G., & Giménez, A. O. (2023).\n",
-    "Advances in Binary and Multiclass Sound Segmentation with Deep Learning Techniques.\n",
-    "https://www.researchgate.net/profile/Pablo-Gimeno/publication/371567111_Advances_in_Binary_and_Multiclass_Audio_Segmentation_with_Deep_Learning_Techniques/links/648a2fba7fcc811dcdce3d3c/Advances-in-Binary-and-Multiclass-Audio-Segmentation-with-Deep-Learning-Techniques.pdf\n",
-    "\n",
-    "[^6]: Ghaffari, Houtan, and Paul Devos.\n",
-    "\"Consistent Birdsong Syllable Segmentation Using Deep Semi-Supervised Learning.\" (2023).\n",
-    "https://dael.euracoustics.org/confs/fa2023/data/articles/000897.pdf\n",
-    "https://github.com/houtan-ghaffari/bird_syllable_segmentation"
    ]
   }
  ],
