--- a/04-classification.ipynb
+++ b/04-classification.ipynb
@@ -111,7 +111,7 @@
     "\n",
     "Now we extract the acoustic features we will use to classify.  \n",
     "\n",
-    "For this example we use the temporal and spectral features, since those are relatively quick to extract."
+    "For this example we use the temporal and spectral features from `soundsig`, since those are relatively quick to extract. For an example that uses fundamental frequency estimation, see https://github.com/theunissenlab/BioSoundTutorial/blob/master/BioSound4.ipynb"
    ]
   },
   {
@@ -211,7 +211,9 @@
    "id": "d89cbb0c-edd2-4ff8-83bd-928cbf0d52b5",
    "metadata": {},
    "source": [
-    "## Fitting a Random Forest classifier"
+    "## Fitting a Random Forest classifier\n",
+    "\n",
+    "Finally we will train a classifer from `scikit-learn` to classify these individuals."
    ]
   },
   {
