--- a/05-dimensionality-reduction-and-clustering.ipynb
+++ b/05-dimensionality-reduction-and-clustering.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Material here is adapted in part from [this tutorial](https://github.com/marathomas/tutorial_repo) shared under CC-BY-4.0 license, that accompanied [this paper](https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/1365-2656.13754).\n",
     "\n",
-    "We are using a (very tiny!) sub-set of the [Jourjine et al. 2023 dataset]() that accompanied the paper [\"Two pup vocalization types are genetically and functionally separable in deer mice\"](https://www.cell.com/current-biology/fulltext/S0960-9822(23)00185-9?_returnURL=https%3A%2F%2Flinkinghub.elsevier.com%2Fretrieve%2Fpii%2FS0960982223001859%3Fshowall%3Dtrue). Some code is also adapted from the [code accompanying the paper](https://github.com/nickjourjine/peromyscus-pup-vocal-evolution)."
+    "We are using a (very tiny!) sub-set of the [Jourjine et al. 2023 dataset]() that accompanied the paper [\"Two pup vocalization types are genetically and functionally separable in deer mice\"](https://www.cell.com/current-biology/fulltext/S0960-9822(23)00185-9?_returnURL=https%3A%2F%2Flinkinghub.elsevier.com%2Fretrieve%2Fpii%2FS0960982223001859%3Fshowall%3Dtrue). Some code is also adapted from the [repository that reproduces the paper results](https://github.com/nickjourjine/peromyscus-pup-vocal-evolution)."
    ]
   },
   {
