Add common bug fixes

--- a/03-cnn-feature-embeddings_wytham.ipynb
+++ b/03-cnn-feature-embeddings_wytham.ipynb
@@ -40,7 +40,7 @@
    "id": "be122add-f45a-4beb-9297-3339b58439fe",
    "metadata": {},
    "source": [
-    "The following cell make take a while...!"
+    "The following cell may take a while...!"
    ]
   },
   {
@@ -67,7 +67,9 @@
     "\n",
     "These files are located on our Google Drive folder here: https://drive.google.com/drive/u/0/folders/1-XOEcKHOSiDSIlSHElOeJY5Jza4Hc-7v but you likely already downloaded them if you followed the steps in the README.\n",
     "\n",
-    "They should be downloaded and placed in the `data` folder of this repository."
+    "They should be downloaded and placed in the `data` folder of this repository.\n",
+    "\n",
+    "**If the cell below generates an error for you, make sure that the paths do not have `../` before them (as in a previous version of this notebook).**"
    ]
   },
   {
@@ -77,8 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wav_folder = \"../data/Merino-Recalde-Wytham-Great-Tit-Dataset-2023-subset/wytham_songs/\"\n",
-    "csv_path = \"../data/Merino-Recalde-Wytham-Great-Tit-Dataset-2023-subset/wytham_annotations.csv\""
+    "wav_folder = \"data/Merino-Recalde-Wytham-Great-Tit-Dataset-2023-subset/wytham_songs/\"\n",
+    "csv_path = \"data/Merino-Recalde-Wytham-Great-Tit-Dataset-2023-subset/wytham_annotations.csv\""
    ]
   },
   {
@@ -174,10 +176,10 @@
     "# Get all annotations for these songtypes\n",
     "all_annots_songtypes = annots_df[annots_df.class_id.isin(top_song_types.class_id.values)]\n",
     "\n",
-    "# Randomly sample 20 recordings per song type\"\n",
+    "# Randomly sample 30 recordings per song type\n",
     "test_songs = all_annots_songtypes.groupby(\"class_id\").sample(30, random_state=3)\n",
     "\n",
-    "# Make sure there are 20 per song type\n",
+    "# Make sure there are 30 per song type\n",
     "test_songs.class_id.value_counts()"
    ]
   },
@@ -186,7 +188,9 @@
    "id": "111d5b6d-8de2-4853-8444-a282d76490e8",
    "metadata": {},
    "source": [
-    "Let's visualize an example using OpenSoundscape:"
+    "Let's visualize an example using OpenSoundscape.\n",
+    "\n",
+    "**If you get an error in this cell, make sure your \"wytham_songs\" directory is unzipped!**"
    ]
   },
   {
@@ -250,18 +254,24 @@
    "id": "74cc894e-44f9-402a-8f9e-15b808f76a84",
    "metadata": {},
    "source": [
-    "Now let's load a model we can use to generate unsupervised feature embeddings for recordings"
+    "Now let's load a model we can use to generate unsupervised feature embeddings for recordings.\n",
+    "\n",
+    "**If the cell below causes your kernel to die and you are working on a Macbook, then run the following in a shell:** \n",
+    "```\n",
+    "conda activate acabb-env\n",
+    "pip install tensorflow-macos\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22bbfab1-c72c-4c80-b0a1-a90d6724acd4",
+   "id": "84d88128-70dc-4548-b8d3-fef611aadae4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "m = torch.hub.load('kitzeslab/bioacoustics-model-zoo', 'BirdNET',trust_repo=True)"
+    "m = torch.hub.load('kitzeslab/bioacoustics-model-zoo', 'BirdNET', trust_repo=True)"
    ]
   },
   {
@@ -344,7 +354,7 @@
    "source": [
     "from sklearn.manifold import TSNE\n",
     "\n",
-    "tsne = TSNE(n_components=2, random_state=42, perplexity=30, n_iter=5000)\n",
+    "tsne = TSNE(n_components=2, random_state=42, perplexity=30, n_iter=1000)\n",
     "embeddings_tsne = tsne.fit_transform(embeddings)"
    ]
   },
@@ -386,7 +396,7 @@
    "source": [
     "This looks fantastic, though not perfect!\n",
     "\n",
-    "Let's see what each of these individual's songs actually look like!"
+    "Let's see what each of these individual's songs actually looks like!"
    ]
   },
   {
@@ -440,14 +450,6 @@
     "\n",
     "A future approach could be to select a song type that many individuals use, and see if individuals can still be identified by the particular quirks in how they sing that song type!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89c11138-c646-495e-9ec9-5c9457519c66",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
