Add matplotlib import

--- a/00-working-with-data-in-vocalpy.ipynb
+++ b/00-working-with-data-in-vocalpy.ipynb
@@ -494,6 +494,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "fig, ax_arr = plt.subplots(2, 2, figsize=(10, 5))\n",
     "ax_arr = ax_arr.ravel()\n",
     "\n",
